--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "toolshop-firestore",
   "version": "1.0.0",
-  "description": "",
+  "description": "Foundation for REST API, before database",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Prasuna Kaveti",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1"
   }
 }
